# LRUCache

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/releases/: v1.0.0.md
.github/workflows/: benchmark.yml  build.yml  clang-format.yml  clang-tidy.yml  coverage.yml  docs.yml  packaging.yml  release.yml  sanitizers.yml  update.yml
benchmarks/: CMakeLists.txt  bench_all.cpp  bench_main.cpp  benchmarks.cpp
benchmarks/baselines/: v1.0.0.json  v1.0.0.md
benchmarks/cases/: bench_erase.cpp  bench_eviction.cpp  bench_get.cpp  bench_mixed_workload.cpp  bench_put.cpp  bench_resize.cpp  bench_scaling.cpp  emplace.cpp  erase.cpp  get.cpp  put.cpp  scaling.cpp
benchmarks/common/: bench_baseline.h  framework.h  helper.h  macros.h  registry.h
benchmarks/reference/: baseline.h
benchmarks/results/: benchmark_results.md
benchmarks/suite/: README.md
benchmarks/suite/access/: element_access.cpp  iteration.cpp  search.cpp
benchmarks/suite/auxiliary/: mixed_workload.cpp
benchmarks/suite/construction/: emplace.cpp
benchmarks/suite/core/: emplace.cpp  erase.cpp  eviction.cpp  insert.cpp  pop_clear.cpp  push_back.cpp  resize.cpp
benchmarks/suite/lifecycle/: construction.cpp  move.cpp
benchmarks/suite/scaling/: reallocation.cpp  reserve.cpp  shrink_to_fit.cpp
benchmarks/suite/utility/: observer.cpp  state.cpp
benchmarks/support/: export.h  framework.h  helpers.h  macros.h  reference.h  registry.h
cmake/: CacheProConfig.cmake.in  NameConfig.cmake.in
docs/: Doxyfile  README.md
examples/: CMakeLists.txt  example_all.cpp  example_main.cpp  examples.cpp
examples/advanced/: example_custom_types.cpp
examples/basic/: example_basic_usage.cpp  example_resize.cpp  resize.cpp
examples/behavior/: eviction_policy.cpp  example_eviction_policy.cpp  example_move_semantics.cpp  example_update_and_promote.cpp  move_semantics.cpp
examples/common/: example_helper.h
examples/diagnostic/: example_inspection.cpp  example_stats_monitoring.cpp  stats_monitoring.cpp
examples/suite/: README.md
examples/suite/advanced/: custom_types.cpp  exception_safety.cpp  move_semantics.cpp  node_internals.cpp  resize_and_reserve.cpp
examples/suite/integration/: custom_key_types.cpp  embedding_in_class.cpp  snapshot_export.cpp  stl_algorithms.cpp
examples/suite/misuse/: null_key_pointer.cpp  resize_to_zero.cpp  stale_value_pointer.cpp  use_after_move.cpp  zero_capacity.cpp
examples/suite/patterns/: bulk_seeding.cpp  cache_aside.cpp  inspection.cpp  peek_without_promoting.cpp  stats_driven_tuning.cpp  update_and_promote.cpp
examples/suite/quickstart/: basic.cpp  basic_usage.cpp  filling_a_cache.cpp  inspecting_entries.cpp
examples/support/: framework.h  helpers.h  macros.h  registry.h
include/: LRUCache.h  LRUCache.tpp  Node.h
include/CachePro/: LRUCache.h  LRUCache.tpp  Node.h
packaging/: README.md
packaging/recipes/cachepro/all/: conandata.yml  conanfile.py
packaging/recipes/cachepro/all/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
packaging/recipes/cachepro/all/test_package/src/: test_package.cpp
packaging/vcpkg-smoke-test/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
packaging/vcpkg-smoke-test/src/: smoke_test.cpp
packaging/vcpkg/ports/cachepro/: portfile.cmake  vcpkg.json
regression/: CMakeLists.txt  regression_main.cpp
regression/support/: export.h  framework.h  helpers.h
script/: update_package_files.py
tests/: CMakeLists.txt  test.cpp  test_all.cpp  test_main.cpp
tests/common/: framework.h  macros.h  registry.h
tests/suite/: README.md
tests/suite/concurrency/: external_locking_contract.cpp  external_synchronization.cpp
tests/suite/integration/: eviction_order.cpp  pool_reuse.cpp  put_get_roundtrip.cpp  resize_workflow.cpp  stats_tracking.cpp
tests/suite/lifecycle/: construction.cpp  destruction.cpp  move_semantics.cpp
tests/suite/regression/: already_front_noop.cpp  empty_source_move.cpp  erase_slot_wraparound.cpp  full_load_guard.cpp  moved_from_put.cpp  resize_alloc_failure.cpp  throwing_ctor_recovery.cpp  update_skips_eviction.cpp
tests/suite/unit/: clear.cpp  constructor.cpp  contains.cpp  emplace.cpp  erase.cpp  erase_clear.cpp  eviction.cpp  get.cpp  inspection.cpp  keys.cpp  lookup.cpp  observer.cpp  peek.cpp  put.cpp  reserve.cpp  resize.cpp  shrink_to_fit.cpp  stats.cpp
tests/support/: framework.h  helpers.h  macros.h  registry.h
tests/unit/: edge_cases.cpp  modifiers.cpp  move_semantics.cpp
